gccida/g1/noce_operand_ok
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_operand_ok/src/ifcvt.c:2058:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v4 = mode_class_0[*( ( unsigned __int8 *)op + 2)] == MODE_VECTOR_FLOAT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_operand_ok/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_operand_ok/src/ifcvt.c:2059:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| ( mode_class_0[*( ( unsigned __int8 *)op + 2)] & 0xFFFFFFFB) == 2; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_operand_ok/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_operand_ok/src/ifcvt.c:2064:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7 = (  struct rtx_def *)op[1]; 
                         ^~~~~
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/noce_operand_ok/src/obj/ifcvt.o] Error 1
